adding badges to the Readme file

--- a/scikit-learn.ipynb
+++ b/scikit-learn.ipynb
@@ -7,6 +7,7 @@
     "<br>\n",
     "\n",
     "# Scikit-Learn Notebook\n",
+    "[Official Website](https://scikit-learn.org/stable/)\n",
     "***"
    ]
   },
