Took out pingouin package causes rendering issues in scipy-stats notebook

--- a/scipy-stats.ipynb
+++ b/scipy-stats.ipynb
@@ -67,10 +67,6 @@
     "# Package for ANOVA Post hoc test\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "\n",
-    "# Package for ANOVA Post hoc test\n",
-    "import pingouin as pg\n",
-    "from pingouin import pairwise_ttests as pgptt\n",
-    "\n",
     "# Mains statistics package\n",
     "import scipy.stats as ss\n",
     "\n",
@@ -1321,333 +1317,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>mean(A)</th>\n",
-       "      <th>mean(B)</th>\n",
-       "      <th>diff</th>\n",
-       "      <th>se</th>\n",
-       "      <th>T</th>\n",
-       "      <th>p-tukey</th>\n",
-       "      <th>hedges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>3.025926</td>\n",
-       "      <td>0.274074</td>\n",
-       "      <td>0.671880</td>\n",
-       "      <td>0.407921</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>0.112678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>5.148148</td>\n",
-       "      <td>-1.848148</td>\n",
-       "      <td>0.671880</td>\n",
-       "      <td>-2.750712</td>\n",
-       "      <td>0.020136</td>\n",
-       "      <td>-0.759818</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.025926</td>\n",
-       "      <td>5.148148</td>\n",
-       "      <td>-2.122222</td>\n",
-       "      <td>0.651819</td>\n",
-       "      <td>-3.255844</td>\n",
-       "      <td>0.004777</td>\n",
-       "      <td>-0.873286</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A  B   mean(A)   mean(B)      diff        se         T   p-tukey    hedges\n",
-       "0  1  2  3.300000  3.025926  0.274074  0.671880  0.407921  0.900000  0.112678\n",
-       "1  1  3  3.300000  5.148148 -1.848148  0.671880 -2.750712  0.020136 -0.759818\n",
-       "2  2  3  3.025926  5.148148 -2.122222  0.651819 -3.255844  0.004777 -0.873286"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Pingouin Tukey Post hoc test\n",
-    "# dependent variable \"dfdiettype['Weigth Loss']\", the nominal variable \"dfdiettype['Diet']\n",
-    "\n",
-    "pg.pairwise_tukey(data=dfdiettype, dv='Weigth Loss', between='Diet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Contrast</th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>Paired</th>\n",
-       "      <th>Parametric</th>\n",
-       "      <th>T</th>\n",
-       "      <th>dof</th>\n",
-       "      <th>alternative</th>\n",
-       "      <th>p-unc</th>\n",
-       "      <th>p-corr</th>\n",
-       "      <th>p-adjust</th>\n",
-       "      <th>BF10</th>\n",
-       "      <th>hedges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Diet</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.407978</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>two-sided</td>\n",
-       "      <td>0.685067</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>bonf</td>\n",
-       "      <td>0.301</td>\n",
-       "      <td>0.112694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Diet</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>-2.834783</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>two-sided</td>\n",
-       "      <td>0.006644</td>\n",
-       "      <td>0.019933</td>\n",
-       "      <td>bonf</td>\n",
-       "      <td>6.658</td>\n",
-       "      <td>-0.783040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Diet</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>-3.169350</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>two-sided</td>\n",
-       "      <td>0.002560</td>\n",
-       "      <td>0.007680</td>\n",
-       "      <td>bonf</td>\n",
-       "      <td>14.288</td>\n",
-       "      <td>-0.850086</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Contrast  A  B  Paired  Parametric         T   dof alternative     p-unc  \\\n",
-       "0     Diet  1  2   False        True  0.407978  49.0   two-sided  0.685067   \n",
-       "1     Diet  1  3   False        True -2.834783  49.0   two-sided  0.006644   \n",
-       "2     Diet  2  3   False        True -3.169350  52.0   two-sided  0.002560   \n",
-       "\n",
-       "     p-corr p-adjust    BF10    hedges  \n",
-       "0  1.000000     bonf   0.301  0.112694  \n",
-       "1  0.019933     bonf   6.658 -0.783040  \n",
-       "2  0.007680     bonf  14.288 -0.850086  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Pingouin Post hoc test with Bonferroni method\n",
-    "# dependent variable \"dv'Weigth Loss'\", the nominal variable \"between 'Diet'\"\n",
-    "\n",
-    "pgptt(dv='Weigth Loss', between='Diet', padjust='bonf', data=dfdiettype, correction=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>mean(A)</th>\n",
-       "      <th>mean(B)</th>\n",
-       "      <th>diff</th>\n",
-       "      <th>se</th>\n",
-       "      <th>T</th>\n",
-       "      <th>df</th>\n",
-       "      <th>pval</th>\n",
-       "      <th>hedges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>3.025926</td>\n",
-       "      <td>0.274074</td>\n",
-       "      <td>0.667026</td>\n",
-       "      <td>0.410890</td>\n",
-       "      <td>48.999937</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>0.113498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>5.148148</td>\n",
-       "      <td>-1.848148</td>\n",
-       "      <td>0.649338</td>\n",
-       "      <td>-2.846202</td>\n",
-       "      <td>48.862035</td>\n",
-       "      <td>0.017411</td>\n",
-       "      <td>-0.786194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.025926</td>\n",
-       "      <td>5.148148</td>\n",
-       "      <td>-2.122222</td>\n",
-       "      <td>0.669608</td>\n",
-       "      <td>-3.169350</td>\n",
-       "      <td>51.860165</td>\n",
-       "      <td>0.007110</td>\n",
-       "      <td>-0.850086</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A  B   mean(A)   mean(B)      diff        se         T         df  \\\n",
-       "0  1  2  3.300000  3.025926  0.274074  0.667026  0.410890  48.999937   \n",
-       "1  1  3  3.300000  5.148148 -1.848148  0.649338 -2.846202  48.862035   \n",
-       "2  2  3  3.025926  5.148148 -2.122222  0.669608 -3.169350  51.860165   \n",
-       "\n",
-       "       pval    hedges  \n",
-       "0  0.900000  0.113498  \n",
-       "1  0.017411 -0.786194  \n",
-       "2  0.007110 -0.850086  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Pingouin Post hoc test with Games Howell procedure\n",
-    "# dependent variable \"dv'Weigth Loss'\", the nominal variable \"between 'Diet'\"\n",
-    "\n",
-    "pg.pairwise_gameshowell(data=dfdiettype, dv='Weigth Loss', between='Diet')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>In the Post hoc test we get all the combinations. In the different Post hoc test we can see it is no statistically significant difference between two Diets Diet 1 and Diet 2. The p values are greater than 0.05 or 5% in all Post hoc tests. The p value in the different Post hoc tests called p-adj, p-tukey, p-corr and pval. The mean values between Diet 1 and Diet 2 are close. They is a statistically significant difference between the Diet 1 and Diet 3 and between the Diet 2 and Diet 3."
+    "<b>In the Post hoc test we get all the combinations. In the different Post hoc test we can see it is no statistically significant difference between two Diets Diet 1 and Diet 2. The p or p-adj values are greater than 0.05 or 5% in the Post hoc tests. The meandiff or mean difference value between Diet 1 and Diet 2 are close. They is a statistically significant difference between the Diet 1 and Diet 3 and between the Diet 2 and Diet 3."
    ]
   },
   {
